P4ADEV-2572 - update